package pt.isep.psoft.aisafe.application.DTO;

public record UpdateAircraftStatusDTO(String status) {}