package pt.isep.psoft.aisafe.domain;

public enum AircraftStatus {
    ACTIVE,
    INACTIVE,
    UNDER_MAINTENANCE
}